<resources>
    <string name="app_name">CapstoneProject</string>

    <string name="book_image_description">Book Image</string>
    <string name="profile_picture_description">Profile Picture</string>
    <string name="books_app_logo_description">Books App Logo</string>
    <string name="add_basket_description">Add Basket Icon</string>

    <string name="cancel">CANCEL</string>
    <string name="add_basket">ADD BASKET</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>

    <string name="search_view_hint">Enter book name, author or publisher</string>
    <string name="nickname_hint">Nickname</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="e_mail_hint">E - Mail</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>

    <string name="e_mail_address">E-Mail\nAddress</string>
    <string name="nickname">Nickname</string>
    <string name="phone_number">Phone\nNumber</string>
    <string name="books">Books</string>
    <string name="basket">Basket</string>
    <string name="profile">Profile</string>
    <string name="best_sellers">Best Sellers</string>
    <string name="add_basket_snack_text">Book added to basket!</string>
    <string name="basket_empty">Your basket is empty!</string>
    <string name="invalid_mail">Invalid e-mail address</string>
    <string name="registered_mail">E-mail address already registered!</string>
    <string name="incomplete_information_entered">Incomplete information entered!</string>
    <string name="wrong_email_password">Wrong E-mail or Password, Try Again !</string>
    <string name="payment_method">Payment Method</string>
    <string name="credit_card">Credit Card</string>
    <string name="paypal">Paypal</string>
    <string name="apple_pay">Apple Pay</string>
    <string name="google_pay">Google Pay</string>
    <string name="address_title">Address</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="total_price">Total Price</string>
    <string name="order_now">Order Now</string>
    <string name="choose_a_payment_method">Choose a payment method</string>
    <string name="your_order_has_been_received">Your order\nhas been received</string>
    <string name="go_to_pay">Go To Pay</string>
    <string name="total_price_value">%s ₺</string>
    <string name="order_now_error">Please choose a payment method!</string>
    <string name="address_error">Please enter address information!</string>
    <string name="add_book_basket_error">The book is already in the basket!</string>
    <string name="sign_up_snack_text">Registration successfully created</string>
    <string name="password_match_error">Passwords do not match</string>
    <string name="sign_out">Sign Out</string>
    <string name="account">Already have an account?</string>
    <string name="forgot">Forgot your password?</string>

    <integer-array name="booksapp_logo_colors">
        <item>@color/eden</item>
        <item>@color/elm</item>
        <item>@color/icecold</item>
        <item>@color/macaroniandcheese</item>
        <item>@color/chardonnay</item>
        <item>@color/elm</item>
        <item>@color/icecold</item>
        <item>@color/macaroniandcheese</item>
        <item>@color/chardonnay</item>
    </integer-array>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="log_in">LOG IN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password_info">Şifrenizi değiştirmek için lütfen e-mail adresinizi giriniz. İletilen maildeki linke tıklayarak değiştirebilirsiniz.</string>


</resources>