<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="signInObject"
            type="com.example.capstoneproject.login.signin.SignInFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.signin.SignInFragment">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/eden"
            android:textSize="@dimen/text_size_biggest"
            app:layout_constraintBottom_toTopOf="@+id/emailInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_biggest"
            android:layout_marginEnd="@dimen/margin_biggest"
            android:hint="@string/e_mail_hint"
            android:textColorHint="@color/eden"
            app:boxStrokeColor="@color/chardonnay"
            app:boxStrokeWidth="@dimen/stroke_width_small"
            app:layout_constraintBottom_toTopOf="@+id/passwordInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:startIconDrawable="@drawable/ic_e_mail"
            app:startIconTint="@color/eden">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/eden"
                android:textColorHint="@color/eden" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_biggest"
            android:layout_marginEnd="@dimen/margin_biggest"
            android:layout_marginBottom="200dp"
            android:hint="@string/password_hint"
            android:textColorHint="@color/eden"
            app:boxStrokeColor="@color/chardonnay"
            app:boxStrokeWidth="@dimen/stroke_width_small"
            app:layout_constraintBottom_toTopOf="@+id/signInButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailInput"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/eden"
            app:startIconDrawable="@drawable/ic_password"
            app:startIconTint="@color/eden">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/eden"
                android:textColorHint="@color/eden" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signInButton"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/chardonnay"
            android:onClick="@{() -> signInObject.signInButton(emailEditText.getText().toString(),passwordEditText.getText().toString())}"
            android:text="@string/sign_in"
            android:textAlignment="center"
            android:textColor="@color/eden"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:backgroundTint="@color/chardonnay"
            android:text="@string/sign_up"
            android:onClick="@{() -> signInObject.signUpButton()}"
            android:textAlignment="center"
            android:textColor="@color/eden"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/passwordInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signInButton" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="193dp"
            android:backgroundTint="@color/chardonnay"
            app:icon="@drawable/ic_baseline_arrow_right_alt_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView2">

        </com.google.android.material.button.MaterialButton>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>